--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,34 @@ PyMySQL==1.1.1
 requests==2.32.3
 sqlparse==0.5.3
 urllib3==2.2.3
+# Django core
+
+# Database drivers
+psycopg2-binary>=2.9   # if using PostgreSQL
+# sqlite3 comes built-in with Python, no need to add
+
+# Django REST Framework
+djangorestframework>=3.15
+
+# Firebase Admin SDK
+firebase-admin>=6.5.0
+
+# Environment variables
+python-decouple>=3.8
+python-dotenv>=1.0.1
+
+# CORS headers (if API is accessed externally)
+django-cors-headers>=4.3
+
+# For handling images/files
+Pillow>=10.0.0
+
+# Gunicorn (for production WSGI server)
+gunicorn>=22.0
+
+# Requests (for APIs / Surepass, etc.)
+requests>=2.32
+
+# For timezones & date handling
+pytz
+
